--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 # ===============================
 #       SERVER
 # ===============================
-server.url = http://localhost:8080
+server.url = http://localhost:8080/
 attach.folder = attaches/
 
 
